--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["asyncua>=1.1.8", "textual>=6.3.0"]
+dependencies = [
+    "asyncua>=1.1.8",
+    "python-dotenv>=1.2.1",
+    "textual>=6.3.0",
+]
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
@@ -53,7 +57,6 @@ skip-magic-trailing-comma = false
 
 [dependency-groups]
 dev = [
-    "python-dotenv>=1.2.1",
     "ruff>=0.14.2",
- "textual-dev>=1.8.0",
+    "textual-dev>=1.8.0",
 ]
