docs: add usage exmples and explanations

--- a/.gitignore
+++ b/.gitignore
@@ -103,8 +103,8 @@ docker-compose.override.yml
 
 # local mock data
 mock/
-
 scripts/
-
 docker-compose.dev.yaml
 docker-compose.yaml
+.local*
+*.tar
