refactor(client_config): normalize security policy/mode, improve cert management, fix naming, add return types, error handling, and docstrings

--- a/uaView/config/settings.json
+++ b/uaView/config/settings.json
@@ -1,6 +1,6 @@
 {
     "connection_1": {
-        "endpoint_url": "opc.tcp://localhost:48040",
+        "endpoint_url": "opc.tcp://DESKTOP-PGSLL9U:48010",
         "security_policy": "None",
         "security_mode": "None"
     },
